Improved examples and fixed mistakes

--- a/ray-crash-course/04-Ray-Multiprocessing.ipynb
+++ b/ray-crash-course/04-Ray-Multiprocessing.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "### Multiprocessing.Pool\n",
     "\n",
-    "If your application already uses `multiprocessing.Pool`, then scaling beyond a single just requires replacing your import statements from this:\n",
+    "If your application already uses `multiprocessing.Pool`, then scaling beyond a single node just requires replacing your import statements from this:\n",
     "\n",
     "```python\n",
     "from multiprocessing.pool import Pool\n",
@@ -114,16 +114,21 @@
     "def f(index):\n",
     "    return index\n",
     "\n",
-    "pool = Pool()\n",
-    "for result in pool.map(f, range(100)):\n",
-    "    print(f'{result}|', end='')"
+    "def run_with_pool(n=100):\n",
+    "    pool = Pool()\n",
+    "    for result in pool.map(f, range(n)):\n",
+    "        print(f'{result}|', end='')\n",
+    "\n",
+    "run_with_pool()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The full `multiprocessing.Pool` API is currently supported. Please see the [multiprocessing documentation](https://docs.python.org/3/library/multiprocessing.html#module-multiprocessing.pool) for details."
+    "We used a function `run_with_pool()` to wrap a scope around the `pool` construction. That way, it goes out of scope when we're finished and Ray can reclaim the resources.\n",
+    "\n",
+    "The full `multiprocessing.Pool` API is supported. Please see Python's [multiprocessing documentation](https://docs.python.org/3/library/multiprocessing.html#module-multiprocessing.pool) for details."
    ]
   },
   {
@@ -145,36 +150,7 @@
     "\n",
     "See [Run on a Cluster](https://docs.ray.io/en/latest/joblib.html#run-on-a-cluster) in the Ray documentation for details on how to use a multi-node Ray cluster instead.\n",
     "\n",
-    "Here is an example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from sklearn.datasets import load_digits\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
-    "from sklearn.svm import SVC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "digits = load_digits()\n",
-    "param_space = {\n",
-    "    'C': np.logspace(-6, 6, 30),\n",
-    "    'gamma': np.logspace(-8, 8, 30),\n",
-    "    'tol': np.logspace(-4, -1, 30),\n",
-    "    'class_weight': [None, 'balanced'],\n",
-    "}\n",
-    "model = SVC(kernel='rbf')\n",
-    "search = RandomizedSearchCV(model, param_space, cv=5, n_iter=300, verbose=10)"
+    "Here is an example. First, we set up Ray with `joblib`:"
    ]
   },
   {
@@ -192,7 +168,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **WARNING:** The next cell will take a VERY LONG TIME TO RUN!"
+    "Now let's use an example taken from the scikit-learn examples, [Restricted Boltzmann Machine features for digit classification](https://scikit-learn.org/stable/auto_examples/neural_networks/plot_rbm_logistic_classification.html#sphx-glr-auto-examples-neural-networks-plot-rbm-logistic-classification-py). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Authors: Yann N. Dauphin, Vlad Niculae, Gabriel Synnaeve\n",
+    "# License: BSD\n",
+    "\n",
+    "import numpy as np\n",
+    "from scipy.ndimage import convolve\n",
+    "from sklearn import linear_model, datasets, metrics\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neural_network import BernoulliRBM\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.base import clone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #############################################################################\n",
+    "# Setting up\n",
+    "\n",
+    "def nudge_dataset(X, Y):\n",
+    "    \"\"\"\n",
+    "    This produces a dataset 5 times bigger than the original one,\n",
+    "    by moving the 8x8 images in X around by 1px to left, right, down, up\n",
+    "    \"\"\"\n",
+    "    direction_vectors = [\n",
+    "        [[0, 1, 0],\n",
+    "         [0, 0, 0],\n",
+    "         [0, 0, 0]],\n",
+    "\n",
+    "        [[0, 0, 0],\n",
+    "         [1, 0, 0],\n",
+    "         [0, 0, 0]],\n",
+    "\n",
+    "        [[0, 0, 0],\n",
+    "         [0, 0, 1],\n",
+    "         [0, 0, 0]],\n",
+    "\n",
+    "        [[0, 0, 0],\n",
+    "         [0, 0, 0],\n",
+    "         [0, 1, 0]]]\n",
+    "\n",
+    "    def shift(x, w):\n",
+    "        return convolve(x.reshape((8, 8)), mode='constant', weights=w).ravel()\n",
+    "\n",
+    "    X = np.concatenate([X] +\n",
+    "                       [np.apply_along_axis(shift, 1, X, vector)\n",
+    "                        for vector in direction_vectors])\n",
+    "    Y = np.concatenate([Y for _ in range(5)], axis=0)\n",
+    "    return X, Y\n",
+    "\n",
+    "\n",
+    "# Load Data\n",
+    "X, y = datasets.load_digits(return_X_y=True)\n",
+    "X = np.asarray(X, 'float32')\n",
+    "X, Y = nudge_dataset(X, y)\n",
+    "X = (X - np.min(X, 0)) / (np.max(X, 0) + 0.0001)  # 0-1 scaling\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(\n",
+    "    X, Y, test_size=0.2, random_state=0)\n",
+    "\n",
+    "# Models we will use\n",
+    "logistic = linear_model.LogisticRegression(solver='newton-cg', tol=1)\n",
+    "rbm = BernoulliRBM(random_state=0, verbose=True)\n",
+    "\n",
+    "rbm_features_classifier = Pipeline(\n",
+    "    steps=[('rbm', rbm), ('logistic', logistic)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #############################################################################\n",
+    "# Training\n",
+    "\n",
+    "# Hyper-parameters. These were set by cross-validation,\n",
+    "# using a GridSearchCV. Here we are not performing cross-validation to\n",
+    "# save time.\n",
+    "rbm.learning_rate = 0.06\n",
+    "rbm.n_iter = 10\n",
+    "# More components tend to give better prediction performance, but larger\n",
+    "# fitting time\n",
+    "rbm.n_components = 100\n",
+    "logistic.C = 6000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we actually use the Ray backend for `joblib`:"
    ]
   },
   {
@@ -202,7 +281,31 @@
    "outputs": [],
    "source": [
     "with joblib.parallel_backend('ray'):\n",
-    "    search.fit(digits.data, digits.target)"
+    "    # Training RBM-Logistic Pipeline\n",
+    "    rbm_features_classifier.fit(X_train, Y_train)\n",
+    "\n",
+    "    # Training the Logistic regression classifier directly on the pixel\n",
+    "    raw_pixel_classifier = clone(logistic)\n",
+    "    raw_pixel_classifier.C = 100.\n",
+    "    raw_pixel_classifier.fit(X_train, Y_train)\n",
+    "\n",
+    "    # #############################################################################\n",
+    "    # Evaluation\n",
+    "\n",
+    "    Y_pred = rbm_features_classifier.predict(X_test)\n",
+    "    print(\"Logistic regression using RBM features:\\n%s\\n\" % (\n",
+    "        metrics.classification_report(Y_test, Y_pred)))\n",
+    "\n",
+    "    Y_pred = raw_pixel_classifier.predict(X_test)\n",
+    "    print(\"Logistic regression using raw pixel features:\\n%s\\n\" % (\n",
+    "        metrics.classification_report(Y_test, Y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you see warnings about the `The 'context' argument`, you can safely ignore them. "
    ]
   },
   {
@@ -213,10 +316,17 @@
     "\n",
     "Python's [`asyncio`](https://docs.python.org/3/library/asyncio.html) can be used with Ray actors and tasks.\n",
     "\n",
-    "> **Note:** The Async API support is experimental and work is ongoing to improve it. Please [report any issues](https://github.com/ray-project/ray/issues) you encounter.\n",
-    "\n",
+    "> **Note:** The Async API support is experimental and work is ongoing to improve it. Please [report any issues](https://github.com/ray-project/ray/issues) you encounter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Actors\n",
-    "Here is an actor example, adapted from the [Ray documentation](https://docs.ray.io/en/latest/async_api.html)."
+    "Here is an actor example, adapted from the [Ray documentation](https://docs.ray.io/en/latest/async_api.html).\n",
+    "\n",
+    "Note the comment before `run_concurrent`. While normally actor methods are invoked synchronously, in this case there may be concurrent invocations!"
    ]
   },
   {
@@ -231,18 +341,64 @@
     "class AsyncActor:\n",
     "    # Multiple invocations of this method can be running in\n",
     "    # the event loop at the same time.\n",
-    "    async def run_concurrent(self):\n",
-    "        print(\"started\")\n",
-    "        await asyncio.sleep(2)   # Concurrent workload here\n",
-    "        print(\"finished\")\n",
+    "    async def run_concurrent(self, index):\n",
+    "        print(f'started {index}')\n",
+    "        await asyncio.sleep(0.2)   # Concurrent workload here\n",
+    "        print(f'finished {index}')\n",
+    "        return index\n",
     "\n",
     "actor = AsyncActor.remote()\n",
     "\n",
-    "# regular ray.get\n",
-    "ray.get([actor.run_concurrent.remote() for _ in range(4)])\n",
+    "ids = []\n",
+    "values = []\n",
+    "for i in range(10):\n",
+    "    # regular ray.get\n",
+    "    ids.append(actor.run_concurrent.remote(i))\n",
     "\n",
-    "# async ray.get\n",
-    "await actor.run_concurrent.remote()"
+    "    # async ray.get\n",
+    "    values.append(await actor.run_concurrent.remote(10+i))\n",
+    "print(ray.get(ids))\n",
+    "print(values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that using `await` with a method invocation implicitly invokes `ray.get()` on the returned object id.\n",
+    "\n",
+    "Under the hood, Ray runs all of the methods inside a single python event loop.\n",
+    "\n",
+    "> **Note:** Running blocking `ray.get` and `ray.wait` inside async actor methods is not allowed, because `ray.get` will block the execution of the event loop.\n",
+    "\n",
+    "You can limit the number of concurrent task running at once using the `max_concurrency` flag. By default, 1000 tasks can be running concurrently. \n",
+    "\n",
+    "In the following cell, we set the `max_concurrency` to `3`, so the subsequent cell will run tasks three at a time. Since there are `12` total, we'll have four groups, each sleeping about `0.2` seconds, so it should take about `0.8` seconds to run."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actor3 = AsyncActor.options(max_concurrency=3).remote()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time ray.get([actor3.run_concurrent.remote(i) for i in range(12)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See the [03: Ray Internals](../advanced-ray/03-Ray-Internals.ipynb) lesson in the [Advanced Ray](../advanced-ray/00-Advanced-Ray-Overview.ipynb) tutorial for more details on _async actors_."
    ]
   },
   {
@@ -265,8 +421,15 @@
     "    return 1\n",
     "\n",
     "# The normal Ray way:\n",
-    "ray.wait([some_task.remote()])\n",
-    "ray.get(some_task.remote())"
+    "id, _ = ray.wait([some_task.remote()])\n",
+    "ray.get(id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `asyncio` alternative way:"
    ]
   },
   {
@@ -275,9 +438,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# asyncio alternative way:\n",
-    "await some_task.remote()\n",
-    "await asyncio.wait([some_task.remote()])"
+    "await some_task.remote()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "future = await asyncio.wait([some_task.remote()])\n",
+    "print(future)\n",
+    "# A tuple is returned:\n",
+    "for x in future:\n",
+    "    print(f'  {type(x)} => {x}')"
    ]
   },
   {
@@ -285,85 +459,6 @@
    "metadata": {},
    "source": [
     "See the [asyncio docs](https://docs.python.org/3/library/asyncio-task.html) for more details on `asyncio` patterns, including timeouts and `asyncio.gather`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Async Actor\n",
-    "\n",
-    "Ray also supports concurrent multitasking by executing many actor tasks at once. To do so, you can define an actor with async methods:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@ray.remote\n",
-    "class AsyncActor:\n",
-    "    async def run_task(self):\n",
-    "        print(\"started\")\n",
-    "        await asyncio.sleep(1) # Network, I/O task here\n",
-    "        print(\"ended\")\n",
-    "\n",
-    "actor = AsyncActor.remote()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the following invocation, all 10 tasks should start at once. After 1 second they should all finish about the same time. Note the _wall time_ that will be printed."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%time ray.get([actor.run_task.remote() for _ in range(10)])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Under the hood, Ray runs all of the methods inside a single python event loop.\n",
-    "\n",
-    "> **Note:** Running blocking `ray.get` and `ray.wait` inside async actor methods is not allowed, because `ray.get` will block the execution of the event loop.\n",
-    "\n",
-    "You can limit the number of concurrent task running at once using the `max_concurrency` flag. By default, 1000 tasks can be running concurrently. \n",
-    "\n",
-    "In the following cell, we set the `max_concurrency` to `3`, so the subsequent cell will run tasks three at a time. Since there are ten total, it should take about four seconds to run."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "actor = AsyncActor.options(max_concurrency=3).remote()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%time ray.get([actor.run_task.remote() for _ in range(10)])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "See the [03: Ray Internals](../advanced-ray/03-Ray-Internals.ipynb) lesson in the [Advanced Ray](../advanced-ray/00-Advanced-Ray-Overview.ipynb) tutorial for more details on _async actors_."
    ]
   },
   {
