Filled in ray memory placeholder

--- a/ray-crash-course/07-Running-Ray-Clusters.ipynb
+++ b/ray-crash-course/07-Running-Ray-Clusters.ipynb
@@ -206,9 +206,47 @@
    "source": [
     "## ray memory\n",
     "\n",
-    "A tool for profiling memory utilization\n",
+    "A new feature of the Ray CLI is the `memory` command which prints a snapshot of the current state of actors and tasks in memory in the cluster. It is useful debugging issues and understanding how Ray has distributed work around your cluster. \n",
     "\n",
-    "TODO"
+    "Here is an example captured on a laptop while the first two lessons in this tutorial were evaluating their cells:\n",
+    "\n",
+    "```\n",
+    "$ ray memory\n",
+    "2020-06-26 06:08:55,158\tINFO scripts.py:1042 -- Connecting to Ray instance at 192.168.1.149:6379.\n",
+    "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
+    "I0626 06:08:55.163417 90759 489258432 global_state_accessor.cc:25] Redis server address = 192.168.1.149:6379, is test flag = 0\n",
+    "I0626 06:08:55.164857 90759 489258432 redis_client.cc:141] RedisClient connected.\n",
+    "I0626 06:08:55.167277 90759 489258432 redis_gcs_client.cc:88] RedisGcsClient Connected.\n",
+    "I0626 06:08:55.168231 90759 489258432 service_based_gcs_client.cc:75] ServiceBasedGcsClient Connected.\n",
+    "-----------------------------------------------------------------------------------------------------\n",
+    " Object ID                                Reference Type       Object Size   Reference Creation Site\n",
+    "=====================================================================================================\n",
+    "; driver pid=89861\n",
+    "ffffffffffffffff6ec7e2960c0000c001000000  LOCAL_REFERENCE                ?   (actor call) <ipython-input-7-a62036e0309c>:<module>:7\n",
+    "55be66b7df500ad56ec7e2960c0000c003000000  LOCAL_REFERENCE               23   (actor call) <ipython-input-7-a62036e0309c>:<module>:8\n",
+    "55be66b7df500ad56ec7e2960c0000c002000000  LOCAL_REFERENCE               15   (actor call) <ipython-input-7-a62036e0309c>:<module>:8\n",
+    "ffffffffffffffffffffffff0c00008001000000  LOCAL_REFERENCE               27   (put object) <ipython-input-9-57253d54e26a>:<module>:1\n",
+    "0f8aa561996c6719ffffffff0c0000c001000000  LOCAL_REFERENCE               88   (task call) <ipython-input-6-9667649da5b7>:<module>:13\n",
+    "55be66b7df500ad56ec7e2960c0000c001000000  LOCAL_REFERENCE               16   (actor call) <ipython-input-7-a62036e0309c>:<module>:8\n",
+    "; driver pid=90154\n",
+    "aa0e49cf6481351dffffffff100000c001000000  LOCAL_REFERENCE               23   (task call) <ipython-input-17-f5cad4404199>:<module>:1\n",
+    "082755fdfe469abcffffffff100000c001000000  LOCAL_REFERENCE                ?   (task call) <ipython-input-31-dd50cc550d0b>:<listcomp>:3\n",
+    "57c6dbda70012254ffffffff100000c001000000  LOCAL_REFERENCE                ?   (task call) <ipython-input-31-dd50cc550d0b>:<listcomp>:3\n",
+    "fab196f393a5de36ffffffff100000c001000000  LOCAL_REFERENCE               88   (task call) <ipython-input-31-dd50cc550d0b>:<listcomp>:3\n",
+    "10473efa8f620095ffffffff100000c001000000  LOCAL_REFERENCE               88   (task call) <ipython-input-31-dd50cc550d0b>:<listcomp>:3\n",
+    "dc7dc79e27e8e5b7ffffffff100000c001000000  LOCAL_REFERENCE               23   (task call) <ipython-input-19-e197d2c09385>:<listcomp>:1\n",
+    "16053fa58b987ab5ffffffff100000c001000000  LOCAL_REFERENCE                ?   (task call) <ipython-input-31-dd50cc550d0b>:<listcomp>:3\n",
+    "852d61559823797effffffff100000c001000000  LOCAL_REFERENCE               23   (task call) <ipython-input-19-e197d2c09385>:<listcomp>:1\n",
+    "2e1f2a844f6b2fd4ffffffff100000c001000000  LOCAL_REFERENCE               23   (task call) <ipython-input-19-e197d2c09385>:<listcomp>:1\n",
+    "a52080f6c7937c01ffffffff100000c001000000  LOCAL_REFERENCE                ?   (task call) <ipython-input-31-dd50cc550d0b>:<listcomp>:3\n",
+    "a1e6529f26e2773cffffffff100000c001000000  LOCAL_REFERENCE                ?   (task call) <ipython-input-31-dd50cc550d0b>:<listcomp>:3\n",
+    "9991ac8b6172b3f2ffffffff100000c001000000  LOCAL_REFERENCE               23   (task call) <ipython-input-18-a0b7fb747444>:<module>:1\n",
+    "3cdffb6f345ef8f3ffffffff100000c001000000  LOCAL_REFERENCE               88   (task call) <ipython-input-31-dd50cc550d0b>:<listcomp>:3\n",
+    "0a51ce9438517c13ffffffff100000c001000000  LOCAL_REFERENCE                ?   (task call) <ipython-input-31-dd50cc550d0b>:<listcomp>:3\n",
+    "-----------------------------------------------------------------------------------------------------\n",
+    "```\n",
+    "\n",
+    "All references are local because this is the output for a single machine. There are tasks and actors running in the workers, all of which are associated with _driver_ processes that originate with `ipython` processes used by the notebooks."
    ]
   },
   {
