--- a/ray-crash-course/solutions/Ray-Crash-Course-Solutions.ipynb
+++ b/ray-crash-course/solutions/Ray-Crash-Course-Solutions.ipynb
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's look at the \"ponder\" question at the end, just using the original implementation. We'll do a few runs of the following cell:"
+    "First, let's look at the \"ponder\" question at the end, just using the original implementation. We'll do a few runs of the following cell. Note that we're using large maximum `n` values here. If you are working on a slow machine or VM, consider deleting the last value `10000000` here and below:"
    ]
   },
   {
