--- a/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
+++ b/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
@@ -827,7 +827,7 @@
    "source": [
     "([image](../images/rllib/Cart-Pole-Episode-Rewards2.png))\n",
     "\n",
-    "For a well-trained model, most runs do very well while occasional runs do poorly. Try plotting other results episodes. The length of `results` is 10."
+    "For a well-trained model, most runs do very well while occasional runs do poorly. Try plotting other results episodes by changing the array index in `results[-1]` to another number between `0` and `9`. (The length of `results` is `10`.)"
    ]
   },
   {
