Changes to layout of tune's analysis object

--- a/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
+++ b/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
@@ -231,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One of the columns in the trial dataframes is the `learner/cumulative_regret`. Let's combine the trail DataFrames into a single DataFrame, then group over the `number_steps_trained` and project out the `learner/cumulative_regret`. Finally, aggregate for each `number_steps_trained` to compute the `mean`, `max`, `min`, and `std` (standard deviation) for the cumulative regret."
+    "One of the columns in the trial dataframes is the `info/learner/default_policy/cumulative_regret`. Let's combine the trail DataFrames into a single DataFrame, then group over the `info/number_steps_trained` and project out the `info/learner/default_policy/cumulative_regret`. Finally, aggregate for each `info/number_steps_trained` to compute the `mean`, `max`, `min`, and `std` (standard deviation) for the cumulative regret."
    ]
   },
   {
@@ -245,8 +245,8 @@
     "for key, df in analysis.trial_dataframes.items():\n",
     "    frame = frame.append(df, ignore_index=True)\n",
     "\n",
-    "df = frame.groupby(\"num_steps_trained\")[\n",
-    "    \"learner/cumulative_regret\"].aggregate([\"mean\", \"max\", \"min\", \"std\"])"
+    "df = frame.groupby(\"info/num_steps_trained\")[\n",
+    "    \"info/learner/default_policy/cumulative_regret\"].aggregate([\"mean\", \"max\", \"min\", \"std\"])"
    ]
   },
   {
