--- a/ray-rllib/multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb
+++ b/ray-rllib/multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb
@@ -228,7 +228,7 @@
     "    df = df.append(df_trial, ignore_index=True)\n",
     "\n",
     "regrets = df \\\n",
-    "    .groupby(\"num_steps_trained\")[\"learner/cumulative_regret\"] \\\n",
+    "    .groupby(\"info/num_steps_trained\")[\"info/learner/default_policy/cumulative_regret\"] \\\n",
     "    .aggregate([\"mean\", \"max\", \"min\", \"std\"])"
    ]
   },
