--- a/ray-rllib/multi-armed-bandits/06-Market-Example.ipynb
+++ b/ray-rllib/multi-armed-bandits/06-Market-Example.ipynb
@@ -516,7 +516,7 @@
    "outputs": [],
    "source": [
     "rewards = df_ts \\\n",
-    "    .groupby(\"num_steps_trained\")[\"episode_reward_mean\"] \\\n",
+    "    .groupby(\"info/num_steps_trained\")[\"episode_reward_mean\"] \\\n",
     "    .aggregate([\"mean\", \"max\", \"min\", \"std\"])\n",
     "\n",
     "rewards"
@@ -528,7 +528,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_line_with_stddev(rewards, x_col='num_steps_trained', y_col='mean', stddev_col='std', \n",
+    "plot_line_with_stddev(rewards, x_col='info/num_steps_trained', y_col='mean', stddev_col='std', \n",
     "                      title='Rewards vs. Steps', x_axis_label='step', y_axis_label='reward')"
    ]
   },
@@ -548,7 +548,7 @@
    "outputs": [],
    "source": [
     "regrets = df_ts \\\n",
-    "    .groupby(\"num_steps_trained\")[\"learner/cumulative_regret\"] \\\n",
+    "    .groupby(\"info/num_steps_trained\")[\"info/learner/default_policy/cumulative_regret\"] \\\n",
     "    .aggregate([\"mean\", \"max\", \"min\", \"std\"])\n",
     "\n",
     "regrets"
