--- a/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
+++ b/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
@@ -492,8 +492,8 @@
     "for key, df in analysis.trial_dataframes.items():\n",
     "    frame = frame.append(df, ignore_index=True)\n",
     "\n",
-    "df = frame.groupby(\"num_steps_trained\")[\n",
-    "    \"learner/cumulative_regret\"].aggregate([\"mean\", \"max\", \"min\", \"std\"])\n",
+    "df = frame.groupby(\"info/num_steps_trained\")[\n",
+    "    \"info/learner/default_policy/cumulative_regret\"].aggregate([\"mean\", \"max\", \"min\", \"std\"])\n",
     "df"
    ]
   },
@@ -606,8 +606,18 @@
     "    for key, df_trial in analysis.trial_dataframes.items():\n",
     "        df = df.append(df_trial, ignore_index=True)\n",
     "\n",
+    "    return df, analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_df(df, analysis):\n",
     "    ts_regrets = df \\\n",
-    "        .groupby(\"num_steps_trained\")[\"learner/cumulative_regret\"] \\\n",
+    "        .groupby(\"info/num_steps_trained\")[\"info/learner/default_policy/cumulative_regret\"] \\\n",
     "        .aggregate([\"mean\", \"max\", \"min\", \"std\"])\n",
     "    \n",
     "    trial = analysis.trials[0]\n",
@@ -630,7 +640,18 @@
    "outputs": [],
    "source": [
     "delta = 0.7\n",
-    "ts_regrets7, model7, means7, covs7 = run_ts(delta)"
+    "ts_df7, analysis7 = run_ts(delta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "ts_regrets7, model7, means7, covs7 = process_df(ts_df7, analysis7)"
    ]
   },
   {
@@ -680,7 +701,18 @@
    "outputs": [],
    "source": [
     "delta = 0.9\n",
-    "ts_regrets9, model9, means9, covs9 = run_ts(delta)"
+    "ts_df9, analysis9 = run_ts(delta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "ts_regrets9, model9, means9, covs9 = process_df(ts_df9, analysis9)"
    ]
   },
   {
@@ -929,7 +961,7 @@
    "outputs": [],
    "source": [
     "rewards = df_ts \\\n",
-    "    .groupby(\"num_steps_trained\")[\"episode_reward_mean\"] \\\n",
+    "    .groupby(\"info/num_steps_trained\")[\"episode_reward_mean\"] \\\n",
     "    .aggregate([\"mean\", \"max\", \"min\", \"std\"])\n",
     "\n",
     "rewards"
@@ -942,7 +974,7 @@
    "outputs": [],
    "source": [
     "regrets = df_ts \\\n",
-    "    .groupby(\"num_steps_trained\")[\"learner/cumulative_regret\"] \\\n",
+    "    .groupby(\"info/num_steps_trained\")[\"info/learner/default_policy/cumulative_regret\"] \\\n",
     "    .aggregate([\"mean\", \"max\", \"min\", \"std\"])\n",
     "\n",
     "regrets"
@@ -961,7 +993,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_line_with_stddev(rewards, x_col='num_steps_trained', y_col='mean', stddev_col='std', \n",
+    "plot_line_with_stddev(rewards, x_col='info/num_steps_trained', y_col='mean', stddev_col='std', \n",
     "                      title='Rewards vs. Steps', x_axis_label='step', y_axis_label='reward')"
    ]
   },
