Renamed the RL references notebook

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -175,7 +175,7 @@
     "| 00 | [Ray RLlib Overview](ray-rllib/00-Ray-RLlib-Overview.ipynb) | Overview of this tutorial, including all the sections. |\n",
     "| 01 | [Introduction to Reinforcement Learning](ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning. You can skim or skip this lesson if you already understand RL concepts. |\n",
     "| 02 | [Introduction to RLlib](ray-rllib/02-Introduction-to-RLlib.ipynb) | An overview of RLlib, its goals and the capabilities it provides. |\n",
-    "| 03 | [RL References](ray-rllib/03-RL-References.ipynb) | References on reinforcement learning. |\n",
+    "|    | [RL References](ray-rllib/References-Reinforcement-Learning.ipynb) | References on reinforcement learning. |\n",
     "\n",
     "Exercise solutions for this introduction can be found [here](ray-rllib/solutions/Ray-RLlib-Solutions.ipynb)."
    ]
