--- a/ray-rllib/00-Ray-RLlib-Overview.ipynb
+++ b/ray-rllib/00-Ray-RLlib-Overview.ipynb
@@ -34,7 +34,7 @@
     "| 00 | [Ray RLlib Overview](00-Ray-RLlib-Overview.ipynb) | Overview of this tutorial, including all the sections. (This file.) |\n",
     "| 01 | [Introduction to Reinforcement Learning](01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning. You can skim or skip this lesson if you already understand RL concepts. |\n",
     "| 02 | [Introduction to RLlib](02-Introduction-to-RLlib.ipynb) | An overview of RLlib, its goals and the capabilities it provides. |\n",
-    "| 03 | [RL References](03-RL-References.ipynb) | References on reinforcement learning. |\n",
+    "|    | [RL References](References-Reinforcement-Learning.ipynb) | References on reinforcement learning. |\n",
     "\n",
     "Exercise solutions for this introduction can be found [here](solutions/Ray-RLlib-Solutions.ipynb)."
    ]
@@ -130,7 +130,7 @@
     "* [Extra: Application - Taxi](explore-rllib/extras/Extra-Application-Taxi.ipynb)\n",
     "* [Extra: Application - Frozen Lake](explore-rllib/extras/Extra-Application-Frozen-Lake.ipynb)\n",
     "\n",
-    "Finally, the [references](03-RL-References.ipynb) collect useful books, papers, blog posts, and other available tutorial materials."
+    "Finally, the [references](References-Reinforcement-Learning.ipynb) collect useful books, papers, blog posts, and other available tutorial materials."
    ]
   },
   {
