--- a/ray-rllib/References-Reinforcement-Learning.ipynb
+++ b/ray-rllib/References-Reinforcement-Learning.ipynb
@@ -36,6 +36,7 @@
     "\n",
     "Several blog posts and series provide concise introductions to RL:\n",
     "\n",
+    "* [A Reinforcement Learning Cheat Sheet](https://towardsdatascience.com/reinforcement-learning-cheat-sheet-2f9453df7651).\n",
     "* [Reinforcement Learning Explained](https://www.oreilly.com/radar/reinforcement-learning-explained/), Junling Hu, 2016. A gentle introduction to the ideas of RL.\n",
     "* [A Beginner's Guide to Deep Reinforcement Learning](https://pathmind.com/wiki/deep-reinforcement-learning), Pathmind, 2019. From Pathmind, which uses RLlib for its products and services. Lots of good references at the end of this post.\n",
     "* [An Outsider's Tour of Reinforcement Learning](http://www.argmin.net/2018/06/25/outsider-rl/), Ben Recht, 2018. A series of posts on technical aspects of RL.\n",
