Added image about OSU's Cassie robot and a link to their tutorials.

--- a/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
+++ b/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
@@ -47,6 +47,7 @@
     "![Walking Man](../images/rllib/walking-man.gif)\n",
     "\n",
     "![Autonomous Vehicle](../images/rllib/daimler-autonomous-car.jpg)\n",
+    "![\"Cassie\": Two-legged Robot](../images/rllib/cassie-crouched.png)\n",
     "![Four-legged Robot](../images/rllib/four-legged-robot.jpeg)\n",
     "\n",
     "Credits:\n",
@@ -55,6 +56,7 @@
     "* [Stacking Legos with Sawyer](https://robohub.org/soft-actor-critic-deep-reinforcement-learning-with-real-world-robots/)\n",
     "* [Walking Man](https://openai.com/blog/openai-baselines-ppo/)\n",
     "* [Autonomous Vehicle](https://www.daimler.com/innovation/case/autonomous/intelligent-drive-2.html)\n",
+    "* [\"Cassie\": Two-legged Robot](https://mime.oregonstate.edu/research/drl/robots/cassie/)\n",
     "* [Four-legged Robot](https://robohub.org/four-legged-robot-that-efficiently-handles-challenging-terrain/)"
    ]
   },
