--- a/ray-rllib/References-Reinforcement-Learning.ipynb
+++ b/ray-rllib/References-Reinforcement-Learning.ipynb
@@ -50,6 +50,7 @@
    "source": [
     "## Other Tutorials and Academic Courses on RL\n",
     "\n",
+    "* [OSU: Distributed AI with Ray](http://web.engr.oregonstate.edu/~afern/distributed-AI-labs/osu-distributed-ai.html)\n",
     "* [University College London COMPM050/COMPGI13](https://www.davidsilver.uk/teaching/)\n",
     "* [UC Berkeley CS 285](http://rail.eecs.berkeley.edu/deeprlcourse/)\n",
     "* [CS 294 Deep Reinforcement Learning, Spring 2017](http://rll.berkeley.edu/deeprlcourse/)\n",
