First lesson for Ray Tune

--- a/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
+++ b/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
@@ -151,7 +151,7 @@
    "source": [
     "Now use Tune to train the policy for this bandit. But first, we want to make sure that Ray is running and we want to initialize Ray in this \"driver\" program explicitly. \n",
     "\n",
-    "> **Tip:** Note that the call to `ray.tune.run` in a few cells below would handle Ray initialization for us, if we omitted the `ray_auto_init=False`, but that can lead to multiple Ray clusters running, so we'll control this more tightly. Hence, we now initialize Ray, then setup our experiment.\n",
+    "> **Note:** The call to `tune.run` below would handle Ray initialization for us, if we omitted the `ray_auto_init=False` option, but that would lead to multiple Ray clusters running. So, we prevent Tune from doing this for us and we initialize Ray explicitly ourselves.\n",
     "\n",
     "The following shell command will probably print _INFO: Ray is already running._ If not, follow the instructions it prints to start Ray."
    ]
