--- a/ray-tune/00-Ray-Tune-Overview.ipynb
+++ b/ray-tune/00-Ray-Tune-Overview.ipynb
@@ -26,6 +26,8 @@
     "|     | Lesson | Description |\n",
     "| :-- | :----- | :---------- |\n",
     "| 00  | [Ray Tune Overview](00-Ray-Tune-Overview.ipynb) | Overview of this tutorial. |\n",
+    "| 01  | [Understanding Hyperparameter Tuning](01-Understanding-Hyperparameter-Tuning.ipynb) | An explanation of hyperparameters vs. parameters and a non-trivial example of hyperparameter tuning/optimization with Tune. |\n",
+    "|     | [Hyperparameter Tuning References](References-Hyperparameter-Tuning.ipynb) | Overview of this tutorial. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](solutions/Ray-Tune-Solutions.ipynb).\n",
     "\n",
