--- a/ray-tune/References-Hyperparameter-Tuning.ipynb
+++ b/ray-tune/References-Hyperparameter-Tuning.ipynb
@@ -10,7 +10,11 @@
     "\n",
     "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
-    "See also [reinforcement learning references](../ray-rllib/References-Reinforcement-Learning.ipynb)."
+    "See also:\n",
+    "\n",
+    "* The [Tune documentation](http://tune.io)\n",
+    "* The [Tune API reference](https://docs.ray.io/en/latest/tune/api_docs/overview.html)\n",
+    "* [Reinforcement learning references](../ray-rllib/References-Reinforcement-Learning.ipynb)."
    ]
   },
   {
